Coding Phase Defects and Tool-based Analysis