@@ -1,17 +1,15 @@
 package drinkshop.service;
 
 import drinkshop.domain.*;
-import drinkshop.repository.ProductRepository;
 import drinkshop.repository.Repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ProductService {
 
-    private final ProductRepository productRepo;
+    private final Repository<Integer, Product> productRepo;
 
-    public ProductService(ProductRepository productRepo) {
+    public ProductService(Repository<Integer, Product> productRepo) {
         this.productRepo = productRepo;
     }
 
@@ -29,13 +27,6 @@ public class ProductService {
     }
 
     public List<Product> getAllProducts() {
-//        Iterable<Product> it=productRepo.findAll();
-//        ArrayList<Product> products=new ArrayList<>();
-//        it.forEach(products::add);
-//        return products;
-
-//        return StreamSupport.stream(productRepo.findAll().spliterator(), false)
-//                    .collect(Collectors.toList());
         return productRepo.findAll();
     }
 
@@ -47,13 +38,13 @@ public class ProductService {
         if (categorie == CategorieBautura.ALL) return getAllProducts();
         return getAllProducts().stream()
                 .filter(p -> p.getCategorie() == categorie)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Product> filterByTip(TipBautura tip) {
         if (tip == TipBautura.ALL) return getAllProducts();
         return getAllProducts().stream()
                 .filter(p -> p.getTip() == tip)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
